# GSPICE

./: .gitignore  BETA_TESTING.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  dummy.s2p  lumen_diode.va  release.ps1  test_4tone.sp  test_4tone_pss.sp  test_ac.sp  test_hb.sp  test_lc.sp  test_mos.sp  test_noise.sp  test_pss.sp  test_rc.sp  test_rf.sp  test_sparam.sp  vcpkg.json
.github/workflows/: build.yml
docs/: ACADEMIC_RELEASE_CHECKLIST.md  COMPARISON_VACASK_XYCE.md  DAE_ARCHITECTURE.md  GSPICE_AUDIT_ROADMAP.md  GSPICE_OSDI_PSP.md  LIMITATIONS.md  LUMEN_GSPICE_COMPETITIVE_ROADMAP.md
include/: binary_raw.hpp  csr_matrix.hpp  dae.hpp  dae_audit.hpp  device.hpp  device_arena.hpp  expression.hpp  fastspice_engine.hpp  fourier.hpp  gspice_api.h  hb_engine.hpp  homotopy.hpp  integration_formula.hpp  matrix.hpp  multirate.hpp  netlist.hpp  node.hpp  osdi.h  osdi_emulator.hpp  osdi_loader.hpp  osdi_metadata.hpp  parser.hpp  sparse_matrix.hpp  ticer.hpp  touchstone.hpp  transient_control.hpp  transient_state_store.hpp  utils.hpp
include/devices/: behavioral_source.hpp  bjt.hpp  capacitor.hpp  controlled_source.hpp  current_source.hpp  diode.hpp  inductor.hpp  mosfet.hpp  multi_port.hpp  osdi_device.hpp  port.hpp  probe.hpp  resistor.hpp  voltage_source.hpp
include/solvers/: klu_solver.hpp  parallel_sparse_solver.hpp
osdi/: psp103.exp  psp103.lib  psp103_nqs.exp  psp103_nqs.lib  psp103va.osdi  pspnqs103va.osdi
src/core/: main.cpp  parser.cpp
tests/: dae_state_test.cpp  manual_ihp_inverter_psp.sp  manual_psp_inverter_tran_fine.sp  manual_psp_min.sp  manual_psp_pmos_pullup.sp  run_csv_expect.ps1  run_expect_error.ps1  run_raw_expect.ps1  run_raw_header_expect.ps1
tests/decks/: behavioral_current.sp  behavioral_voltage.sp  bjt_npn.sp  controlled_sources.sp  corners_spec.sp  current_controlled_sources.sp  dae_audit.sp  dc_nested.sp  dc_sweep_model.sp  error_compact_mos_fallback.sp  error_ihp_primitive_fallback.sp  error_pss_unimplemented.sp  error_trtol_min_step.sp  error_unsupported_element.sp  ic_temp_global.sp  ihp_lv_mos_wrapper.sp  include.sp  lib_section.sp  lumen_ihp_inverter_short.sp  lumen_ihp_inverter_user.sp  mc_source.sp  mc_spec.sp  mc_uniform_lhs.sp  measure_tran.sp  nodeset_solver.sp  noise_resistor.sp  options.sp  options_policy.sp  osdi_builtin.sp  osdi_internal_nodes.sp  osdi_missing_psp.sp  osdi_psp_dae_audit.sp  osdi_psp_inverter.sp  osdi_psp_inverter_loaded.sp  osdi_psp_options.sp  osdi_psp_pmos_pullup.sp  param_expression.sp  pz_rc.sp  rc_pulse_i.sp  rc_pulse_v.sp  (+15 more)
tests/decks/models/: corners.lib  load.inc
tests/reference/: psp_inverter_gspice.sp  psp_inverter_vacask.sim  rc_step_gspice.sp  rc_step_vacask.sim  rc_step_xyce.cir
tools/: build_ihp_psp_osdi.ps1  build_with_vcpkg.ps1  check_environment.ps1  run_benchmark.py  validate_transient.py
